# actuator

./: .gitignore  Cargo.toml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
actuator/: .gitignore  __init__.py  bindings.pyi  cli.py  pycan.py  requirements-dev.txt
actuator/actuator/: Cargo.toml  README.md  build.rs
actuator/actuator/proto/actuator/: common.proto
actuator/actuator/proto/googleapis/google/api/: client.proto
actuator/actuator/proto/googleapis/google/longrunning/: operations.proto
actuator/actuator/src/: errors.rs  grpc.rs  lib.rs
actuator/actuator/src/client/: mod.rs
actuator/actuator/src/server/: actuator.rs  mod.rs  operations.rs
actuator/bindings/: .gitignore  Cargo.toml  bindings.pyi
actuator/bindings/src/: lib.rs
actuator/cpp/: .gitignore  Makefile  main.cpp  profile.cpp
actuator/proto/actuator/: common.proto  robstride.proto
actuator/robstride/: Cargo.toml  README.md
actuator/robstride/src/: actuator.rs  actuator_types.rs  can.rs  config.rs  json_logger.rs  lib.rs  main.rs  motor.rs  port.rs  protocol.rs  supervisor.rs  transport.rs  types.rs
actuator/robstride/src/actuators/: mod.rs  robstride00.rs  robstride01.rs  robstride02.rs  robstride03.rs  robstride04.rs
actuator/rust/: .gitignore  Cargo.toml  README.md  bindings.pyi  lib.pyi  py.pyi  pyproject.toml
actuator/rust/bindings/: Cargo.toml  bindings.pyi  pyproject.toml
actuator/rust/bindings/src/: lib.rs
actuator/rust/py/: Cargo.toml  py.pyi  pyproject.toml
actuator/rust/py/src/: lib.rs
actuator/rust/robstride/: Cargo.toml  README.md
actuator/rust/robstride/src/: lib.rs  main.rs  port.rs
actuator/rust/robstride/src/scripts/: find_id.rs
actuator/rust/src/: can.rs  lib.rs  robstride.rs
actuator/scripts/: plot_profile.py
actuator/sim/: robstride.py
examples/: jogging.py  sim.py  sinusoidal_movement.py  supervisor.py  supervisor_and_control.py  wasd_control.py
tests/: test_robstride.py
