[workspace]
members = [
    "actuator/rust/bindings",
    "actuator/rust/robstride",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

description = "Actuator package"
authors = ["K-Scale Labs <ben@kscale.dev>"]
repository = "https://github.com/kscalelabs/actuator"
license = "MIT"
readme = "README.md"
