[package]

name = "bindings"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]

name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = ">= 0.21.0", features = ["extension-module"] }
pyo3-stub-gen = ">= 0.6.0"
robstride = { path = "../robstride" }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
