[package]

name = "robstride"
readme = "README.md"
description = "Interface for controlling actuators built by Robstride"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "robstride"
crate-type = ["cdylib", "rlib"]

[dependencies]

ctrlc = "^3.4.5"
lazy_static = "^1.4.0"
spin_sleep = "^1.2.1"
nix = "^0.26.2"
log = "^0.4.22"
serialport = { version = "^4.2.0", optional = true }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
serialport = "^4.2.0"

[[bin]]

name = "motors"
path = "src/bin/motors.rs"
