[package]
name = "lib"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
pyo3-stub-gen.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true

[[bin]]
name = "stub_gen"
doc = false
