[package]
name = "bindings"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = ">= 0.21.0", features = ["extension-module"] }
pyo3-stub-gen = ">= 0.6.0"
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
serialport = "4.5.1"

# Other packages in the workspace.
robstride = { path = "../robstride" }
