[package]
name = "robstride"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "robstride"
crate-type = ["cdylib", "rlib"]

[dependencies]
serialport = "4.5.1"
