[package]
name = "robstride"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "robstride"
crate-type = ["cdylib", "rlib"]

[dependencies]
serialport = "4.5.1"
ctrlc = "3.4.5"
lazy_static = "1.4.0"
spin_sleep = "1.2.1"
clap = { version = "4.3", features = ["derive"] }
